k8s/celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dealwallet-celery-beat

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dealwallet-celery-beat

  template:
    metadata:
      labels:
        app: dealwallet-celery-beat

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: celery-beat

          image: ghcr.io/dealwallet1/dealwallet-scrapy:c002be3
          imagePullPolicy: Always

          command:
            - celery

          args:
            - "-A"
            - "dealwallet_scraper.celery.celery_app:celery_inst"
            - "beat"
            - "--loglevel=INFO"

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"

            limits:
              cpu: "250m"
              memory: "512Mi"
