k8s/celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dealwallet-celery-worker

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dealwallet-celery-worker

  template:
    metadata:
      labels:
        app: dealwallet-celery-worker

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: celery-worker

          image: ghcr.io/dealwallet1/dealwallet-scrapy:fd4daf7
          imagePullPolicy: Always

          command:
            - celery

          args:
            - "-A"
            - "dealwallet_scraper.celery.celery_app:celery_inst"
            - "worker"
            - "--loglevel=INFO"

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "1Gi"
