k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dealwallet-scrapyd

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dealwallet-scrapyd

  template:
    metadata:
      labels:
        app: dealwallet-scrapyd

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: dealwallet-scrapyd

          image: ghcr.io/dealwallet1/dealwallet-scrapy:b2dd053
          imagePullPolicy: Always

          ports:
            - containerPort: 6800
              protocol: TCP

          command:
            - scrapyd

          args:
            - "--pidfile="

          volumeMounts:
            - name: dealwallet-scrapyd-storage
              mountPath: /var/lib/scrapyd

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1"
              memory: "4Gi"

      volumes:
        - name: dealwallet-scrapyd-storage
          persistentVolumeClaim:
            claimName: dealwallet-scrapyd-pvc


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dealwallet-scheduler

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dealwallet-scheduler

  template:
    metadata:
      labels:
        app: dealwallet-scheduler

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: dealwallet-scheduler

          image: ghcr.io/dealwallet1/dealwallet-scrapy:b2dd053
          imagePullPolicy: Always

          command:
            - python

          args:
            - scheduler.py

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
