k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dealwallet-scrapyd

spec:
  type: LoadBalancer

  selector:
    app: dealwallet-scrapyd

  ports:
    - name: http
      protocol: TCP
      port: 4079
      targetPort: 6800
