k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: dealwallet-scrapyd

  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  rules:
    - host: celery-scrapy.dealwallet.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: dealwallet-scrapyd
                port:
                  number: 6800

  tls:
    - hosts:
        - celery-scrapy.dealwallet.com
